--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,83 +2,54 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@string{apj = {Astrophysical Journal}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@ARTICLE{guichandut2023,
+  abbr          = {arxiv},
+  author        = {{Guichandut}, Simon and {Cumming}, Andrew},
+  title         = "{The imprint of convection on Type I X-ray bursts: Pauses in photospheric radius expansion lightcurves}",
+  journal       = {arXiv e-prints},
+  keywords      = {Astrophysics - High Energy Astrophysical Phenomena},
+  year          = 2023,
+  month         = jan,
+  eid           = {arXiv:2301.08769},
+  pages         = {arXiv:2301.08769},
+  doi           = {10.48550/arXiv.2301.08769},
+  arxiv         = {2301.08769},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2023arXiv230108769G},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+
+
+@article{guichandut2021,
+  abbr        = {ApJ},
+  bibtex_show = {true},
+  author      = {{Guichandut}, Simon and {Cumming}, Andrew and {Falanga}, Maurizio and {Li}, Zhaosheng and {Zamfir}, Michael},
+  title       = {Expanded Atmospheres and Winds in Type I X-Ray Bursts from Accreting Neutron Stars},
+  journal     = {Astrophysical Journal},
+  publisher   = {apj},
+  keywords    = {Neutron stars, Stellar winds, X-ray bursts, 1108, 1636, 1814, Astrophysics - High Energy Astrophysical Phenomena},
+  year        = {2021},
+  month       = {jun},
+  volume      = {914},
+  number      = {1},
+  pages       = {49},
+  doi         = {10.3847/1538-4357/abfa13},
+  url         = {https://iopscience.iop.org/article/10.3847/1538-4357/abfa13/pdf},
+  html        = {https://iopscience.iop.org/article/10.3847/1538-4357/abfa13/pdf},
+  arxiv       = {2103.08476},
+  adsurl      = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914...49G},
+  selected    = {true},
+  abstract    = {We calculate steady-state models of radiation-driven super-Eddington winds and static expanded envelopes of neutron stars caused by high luminosities in type I X-ray bursts. We use flux-limited diffusion to model the transition from optically thick to optically thin, and include effects of general relativity, allowing us to study the photospheric radius close to the star as the hydrostatic atmosphere evolves into a wind. We find that the photospheric radius evolves monotonically from static envelopes (rph ≲ 50-70 km) to winds (rph ≈ 100-1000 km). Photospheric radii of less than 100 km, as observed in most photospheric radius expansion bursts, can be explained by static envelopes, but only in a narrow range of luminosity. In most bursts, we would expect the luminosity to increase further, leading to a wind with photospheric radius ≳100 km. In the contraction phase, the expanded envelope solutions show that the photosphere is still ≈1 km above the surface when the effective temperature is only 3% away from its maximum value. This is a possible systematic uncertainty when interpreting the measured Eddington fluxes from bursts at touchdown. We also discuss the applicability of steady-state models to describe the dynamics of bursts. In particular, we show that the sub- to super-Eddington transition during the burst rise is rapid enough that static models are not appropriate. Finally, we analyze the strength of spectral shifts in our models. Expected shifts at the photosphere are dominated by gravitational redshift, and are therefore predicted to be less than a few percent.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@mastersthesis{guichandut2020,
+  abbr    = {MSc Thesis},
+  author  = {{Guichandut}, Simon},
+  title   = {Regimes of photospheric radius expansion driven by high luminosities in Type I X-ray bursts},
+  school  = {McGill University},
+  year    = {2020},
+  month   = {august},
+  html    = {https://escholarship.mcgill.ca/concern/theses/n870zw072},
+  pdf     = {Thesis.pdf}
 }
