--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,28 +5,43 @@
 @string{apj = {Astrophysical Journal}}
 
 @ARTICLE{guichandut2023,
-  abbr          = {arxiv},
-  author        = {{Guichandut}, Simon and {Cumming}, Andrew},
-  title         = "{The imprint of convection on Type I X-ray bursts: Pauses in photospheric radius expansion lightcurves}",
-  journal       = {arXiv e-prints},
-  keywords      = {Astrophysics - High Energy Astrophysical Phenomena},
-  year          = 2023,
-  month         = jan,
-  eid           = {arXiv:2301.08769},
-  pages         = {arXiv:2301.08769},
-  doi           = {10.48550/arXiv.2301.08769},
-  arxiv         = {2301.08769},
-  adsurl        = {https://ui.adsabs.harvard.edu/abs/2023arXiv230108769G},
+  abbr        = {ApJ},
+  bibtex_show = {true},
+  author      = {{Guichandut}, Simon and {Cumming}, Andrew},
+  title       = "{The Imprint of Convection on Type I X-Ray Bursts: Pauses in Photospheric Radius Expansion Lightcurves}",
+  journal     = {The Astrophysical Journal},
+  keywords    = {Neutron stars},
+  year        = 2023,
+  month       = aug,
+  volume      = {954},
+  number      = {1},
+  pages       = {54},
+  doi         = {10.3847/1538-4357/ace43c},
+  url         = {https://iopscience.iop.org/article/10.3847/1538-4357/ace43c/pdf},
+  html        = {https://iopscience.iop.org/article/10.3847/1538-4357/ace43c/pdf},
+  arxiv       = {2301.08769},
+  adsurl      = {https://ui.adsabs.harvard.edu/abs/2023ApJ...954...54G},
+  selected    = {true},
+  abstract    = {Motivated by the recent observation by NICER of a type I X-ray burst from SAX J1808.4–3658 with a distinct
+“pause” feature during its rise, we show that bursts which ignite in a helium layer underneath a hydrogen-rich shell
+naturally give rise to such pauses, as long as enough energy is produced to eject the outer layers of the envelope by
+super-Eddington winds. The length of the pause is determined by the extent of the convection generated after
+ignition, while the rate of change of luminosity following the pause is set by the hydrogen gradient left behind by
+convection. Using the MESA stellar evolution code, we simulate the accumulation, nuclear burning, and convective
+mixing prior to and throughout the ignition of the burst, followed by the hydrodynamic wind. We show that the
+results are sensitive to the treatment of convection adopted within the code. In particular, the efficiency of mixing
+at the H/He interface plays a key role in determining the shape of the lightcurve. The data from
+SAX J1808.4–3658 favor strong mixing scenarios. Multidimensional simulations will be needed to properly
+model the interaction between convection and nuclear burning during these bursts, which will then enable a new
+way to use X-ray burst lightcurves to study neutron star surfaces.}
 }
-
-
 
 @article{guichandut2021,
   abbr        = {ApJ},
   bibtex_show = {true},
   author      = {{Guichandut}, Simon and {Cumming}, Andrew and {Falanga}, Maurizio and {Li}, Zhaosheng and {Zamfir}, Michael},
   title       = {Expanded Atmospheres and Winds in Type I X-Ray Bursts from Accreting Neutron Stars},
-  journal     = {Astrophysical Journal},
+  journal     = {The Astrophysical Journal},
   publisher   = {apj},
   keywords    = {Neutron stars, Stellar winds, X-ray bursts, 1108, 1636, 1814, Astrophysics - High Energy Astrophysical Phenomena},
   year        = {2021},
