--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,35 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal}}
 
+@ARTICLE{guichandut2024,
+       author = {{Guichandut}, Simon and {Zingale}, Michael and {Cumming}, Andrew},
+        title = "{Hydrodynamical simulations of proton ingestion flashes in Type I X-ray Bursts}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2024,
+        month = may,
+          eid = {arXiv:2405.08952},
+        pages = {arXiv:2405.08952},
+          doi = {10.48550/arXiv.2405.08952},
+archivePrefix = {arXiv},
+       eprint = {2405.08952},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240508952G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+     abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath
+a hydrogen-rich shell. This situation is relevant to Type I X-ray bursts on neutron stars which accrete
+from a hydrogen-rich companion. Using the low Mach number fluid code MAESTROeX, we investigate the
+growth of the convection zone due to nuclear burning, and the evolution of the chemical abundances
+in the atmosphere of the star. We also examine the convective boundary mixing processes which cause
+the evolution to differ significantly from previous one-dimensional simulations that rely on mixinglength theory.
+We find that the convection zone grows outwards as penetrating fluid elements cool
+the overlying radiative layer, rather than directly from the increasing entropy of the convection zone
+itself. Simultaneously, these flows efficiently mix composition, carrying carbon out of, and protons into
+the convection zone even before contact with the hydrogen shell. We discuss the implications of these
+effects for future modeling of these events and observations.}
+}
+
+
 @ARTICLE{guichandut2023,
   abbr        = {ApJ},
   bibtex_show = {true},
