--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@ archivePrefix = {arXiv},
        eprint = {2405.08952},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240508952G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
      abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath
 a hydrogen-rich shell. This situation is relevant to Type I X-ray bursts on neutron stars which accrete
 from a hydrogen-rich companion. Using the low Mach number fluid code MAESTROeX, we investigate the
