--- a/_i18n/fr/_news/2024_05_16.md
+++ b/_i18n/fr/_news/2024_05_16.md
@@ -1,1 +1,1 @@
-Mon troisième article est maintenant disponible sur <a href="https://arxiv.org/pdf/2405.08952">arXiv</a>!
+Mon troisième article est maintenant disponible sur <a href="https://arxiv.org/abs/2405.08952">arXiv</a>!
