--- a/_i18n/en/_news/2024_05_16.md
+++ b/_i18n/en/_news/2024_05_16.md
@@ -1,1 +1,1 @@
-My third paper is now up on <a href="https://arxiv.org/pdf/2405.08952">arXiv</a>. Feedback welcome!
+My third paper is now up on <a href="https://arxiv.org/abs/2405.08952">arXiv</a>. Feedback welcome!
