--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
 @string{apj = {Astrophysical Journal}}
 
 @ARTICLE{guichandut2024,
+         abbr = {arxiv},
        author = {{Guichandut}, Simon and {Zingale}, Michael and {Cumming}, Andrew},
         title = "{Hydrodynamical simulations of proton ingestion flashes in Type I X-ray Bursts}",
       journal = {arXiv e-prints},
@@ -17,6 +18,7 @@
 archivePrefix = {arXiv},
        eprint = {2405.08952},
  primaryClass = {astro-ph.HE},
+         html = {https://arxiv.org/abs/2405.08952},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240508952G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
      abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath
