--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,23 +4,40 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal}}
 
-@ARTICLE{guichandut2024,
-         abbr = {arxiv},
-       author = {{Guichandut}, Simon and {Zingale}, Michael and {Cumming}, Andrew},
-        title = "{Hydrodynamical simulations of proton ingestion flashes in Type I X-ray Bursts}",
+@ARTICLE{zingale2024,
+       author = {{Zingale}, Michael and {Bhargava}, Khanak and {Brady}, Ryan and {Chen}, Zhi and {Guichandut}, Simon and {Johnson}, Eric T. and {Katz}, Max and {Smith Clark}, Alexander},
+        title = "{The Challenges of Modeling Astrophysical Reacting Flows}",
       journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2024,
-        month = may,
-          eid = {arXiv:2405.08952},
-        pages = {arXiv:2405.08952},
-          doi = {10.48550/arXiv.2405.08952},
+        month = nov,
+          eid = {arXiv:2411.12491},
+        pages = {arXiv:2411.12491},
 archivePrefix = {arXiv},
-       eprint = {2405.08952},
- primaryClass = {astro-ph.HE},
-         html = {https://arxiv.org/abs/2405.08952},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240508952G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+       eprint = {2411.12491},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241112491Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{guichandut2024,
+  abbr        = {ApJ},
+  bibtex_show = {true},
+  author      = {{Guichandut}, Simon and {Zingale}, Michael and {Cumming}, Andrew},
+  title       = "{Hydrodynamical Simulations of Proton Ingestion Flashes in Type I X-Ray Bursts}",
+  journal     = {The Astrophysical Journal},
+  keywords    = {Neutron stars, Astrophysical fluid dynamics},
+  year        = 2024,
+  month       = nov,
+  volume      = {975},
+  number      = {2},
+  pages       = {250},
+  doi         = {10.3847/1538-4357/ad81f7},
+  url         = {https://iopscience.iop.org/article/10.3847/1538-4357/ad81f7/pdf},
+  html        = {https://iopscience.iop.org/article/10.3847/1538-4357/ad81f7/pdf},
+  arxiv       = {2405.08952},
+  adsurl      = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975..250G},
+  selected    = {true},
      abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath
 a hydrogen-rich shell. This situation is relevant to Type I X-ray bursts on neutron stars which accrete
 from a hydrogen-rich companion. Using the low Mach number fluid code MAESTROeX, we investigate the
@@ -85,7 +102,7 @@ way to use X-ray burst lightcurves to study neutron star surfaces.}
   html        = {https://iopscience.iop.org/article/10.3847/1538-4357/abfa13/pdf},
   arxiv       = {2103.08476},
   adsurl      = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914...49G},
-  selected    = {true},
+  selected    = {false},
   abstract    = {We calculate steady-state models of radiation-driven super-Eddington winds and static expanded envelopes of neutron stars caused by high luminosities in type I X-ray bursts. We use flux-limited diffusion to model the transition from optically thick to optically thin, and include effects of general relativity, allowing us to study the photospheric radius close to the star as the hydrostatic atmosphere evolves into a wind. We find that the photospheric radius evolves monotonically from static envelopes (rph ≲ 50-70 km) to winds (rph ≈ 100-1000 km). Photospheric radii of less than 100 km, as observed in most photospheric radius expansion bursts, can be explained by static envelopes, but only in a narrow range of luminosity. In most bursts, we would expect the luminosity to increase further, leading to a wind with photospheric radius ≳100 km. In the contraction phase, the expanded envelope solutions show that the photosphere is still ≈1 km above the surface when the effective temperature is only 3% away from its maximum value. This is a possible systematic uncertainty when interpreting the measured Eddington fluxes from bursts at touchdown. We also discuss the applicability of steady-state models to describe the dynamics of bursts. In particular, we show that the sub- to super-Eddington transition during the burst rise is rapid enough that static models are not appropriate. Finally, we analyze the strength of spectral shifts in our models. Expected shifts at the photosphere are dominated by gravitational redshift, and are therefore predicted to be less than a few percent.}
 }
 
