--- a/_i18n/fr/_news/2023_08_22.md
+++ b/_i18n/fr/_news/2023_08_22.md
@@ -1,1 +1,1 @@
-My paper was published in <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ace43c">The Astrophysical Journal</a> today!
+Mon deuxième article a été publié dans <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ace43c">The Astrophysical Journal</a> aujoud'hui!
