--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,25 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal}}
 
+@ARTICLE{barra2025,
+      abbr    = {A\&A},
+       author = {{Barra}, F. and {Barret}, D. and {Pinto}, C. and {Di Salvo}, T. and {Weinberg}, N. and {Guichandut}, S.},
+        title = "{Line detections in photospheric radius expansion bursts from 4U 1820-303}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = jan,
+          doi = {10.48550/arXiv.2501.01488},
+archivePrefix = {arXiv},
+       arxiv = {2501.01488},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250101488B},
+       abstract = {Context: NICER (Neutron star Interior Composition ExploreR) is the instrument of choice for the spectral analysis of type I X-ray bursts, as it provides high throughput at X-ray CCD resolution, down to 0.3 keV. Aims: This study investigates whether the energies of absorption lines detected in photospheric radius expansion (PRE) bursts correlate with the inferred blackbody radius. Previous reports suggested such a correlation, attributed to a combination of weaker gravitational redshift and higher blueshifts in bursts with larger radii. Methods: The analysis reexamines four previously studied PRE bursts and examines eight additional bursts from 4U 1820-303, evidencing PRE. Spectral evolution is tracked on the shortest possible timescales (tenth of a second) adopting two parallel continuum descriptions to characterise the photospheric expansion and line evolution. Applying the accretion-enhanced model, maximum blackbody radii of up to ∼900 km are inferred, with peak bolometric luminosities exceeding the Eddington limit of an Helium accretor. Absorption lines are assessed for significance using Monte Carlo simulations, and spectral lines are characterised using the state-of-art plasma codes available within {\sc{spex}} with a phenomenological continuum. A thorough parameter search explores Doppler shifts to avoid local minima. Results: Several significant (> 99.9%) absorption lines, including the previously reported 2.97 keV line, are detected. While no consistent correlation between line energies and blackbody radii is confirmed, bursts with larger radii exhibit up to four lines and the line strength is higher. The modelling suggests that the observed lines mostly originate from slightly redshifted (almost rest-frame) photo-/collisionally ionised gas in emission. For the burst with the largest PRE, a combination of photo-ionised plasma in both emission and absorption is preferred.}
+}
+
+
+
 @ARTICLE{zingale2024,
-         abbr = {arXiv},
+         abbr = {AstroNum},
        author = {{Zingale}, Michael and {Bhargava}, Khanak and {Brady}, Ryan and {Chen}, Zhi and {Guichandut}, Simon and {Johnson}, Eric T. and {Katz}, Max and {Smith Clark}, Alexander},
         title = "{The Challenges of Modeling Astrophysical Reacting Flows}",
       journal = {arXiv e-prints},
@@ -14,6 +31,7 @@
         month = nov,
         arxiv = {2411.12491},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241112491Z},
+       abstract = {Stellar evolution is driven by the changing composition of a star from nuclear reactions. At the late stages of evolution and during explosive events, the timescale can be short and drive strong hydrodynamic flows, making simulations of astrophysical reacting flows challenging. Over the past decades, the standard approach to modeling reactions in simulation codes has been operator splitting, using implicit integrators for reactions. Here we explore some of the assumptions in this standard approach and describe some techniques for improving the efficiency and accuracy of astrophysical reacting flows.}
 }
 
 @ARTICLE{guichandut2024,
@@ -34,17 +52,7 @@
   arxiv       = {2405.08952},
   adsurl      = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975..250G},
   selected    = {true},
-     abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath
-a hydrogen-rich shell. This situation is relevant to Type I X-ray bursts on neutron stars which accrete
-from a hydrogen-rich companion. Using the low Mach number fluid code MAESTROeX, we investigate the
-growth of the convection zone due to nuclear burning, and the evolution of the chemical abundances
-in the atmosphere of the star. We also examine the convective boundary mixing processes which cause
-the evolution to differ significantly from previous one-dimensional simulations that rely on mixinglength theory.
-We find that the convection zone grows outwards as penetrating fluid elements cool
-the overlying radiative layer, rather than directly from the increasing entropy of the convection zone
-itself. Simultaneously, these flows efficiently mix composition, carrying carbon out of, and protons into
-the convection zone even before contact with the hydrogen shell. We discuss the implications of these
-effects for future modeling of these events and observations.}
+     abstract = {We perform the first multidimensional fluid simulations of thermonuclear helium ignition underneath a hydrogenrich shell. This situation is relevant to Type I X-ray bursts on neutron stars that accrete from a hydrogen-rich companion. Using the low-Mach number fluid code MAESTROeX, we investigate the growth of the convection zone due to nuclear burning, and the evolution of the chemical abundances in the atmosphere of the star. We also examine the convective boundary mixing processes that cause the evolution to differ significantly from previous one-dimensional simulations that rely on mixing-length theory. We find that the convection zone grows outward as penetrating fluid elements cool the overlying radiative layer, rather than directly from the increasing entropy of the convection zone itself. Simultaneously, these flows efficiently mix composition, carrying carbon out of and protons into the convection zone even before contact with the hydrogen shell. We discuss the implications of these effects for future modeling of these events and observations.}
 }
 
 
@@ -66,18 +74,7 @@ effects for future modeling of these events and observations.}
   arxiv       = {2301.08769},
   adsurl      = {https://ui.adsabs.harvard.edu/abs/2023ApJ...954...54G},
   selected    = {true},
-  abstract    = {Motivated by the recent observation by NICER of a type I X-ray burst from SAX J1808.4–3658 with a distinct
-“pause” feature during its rise, we show that bursts which ignite in a helium layer underneath a hydrogen-rich shell
-naturally give rise to such pauses, as long as enough energy is produced to eject the outer layers of the envelope by
-super-Eddington winds. The length of the pause is determined by the extent of the convection generated after
-ignition, while the rate of change of luminosity following the pause is set by the hydrogen gradient left behind by
-convection. Using the MESA stellar evolution code, we simulate the accumulation, nuclear burning, and convective
-mixing prior to and throughout the ignition of the burst, followed by the hydrodynamic wind. We show that the
-results are sensitive to the treatment of convection adopted within the code. In particular, the efficiency of mixing
-at the H/He interface plays a key role in determining the shape of the lightcurve. The data from
-SAX J1808.4–3658 favor strong mixing scenarios. Multidimensional simulations will be needed to properly
-model the interaction between convection and nuclear burning during these bursts, which will then enable a new
-way to use X-ray burst lightcurves to study neutron star surfaces.}
+  abstract    = {Motivated by the recent observation by NICER of a type I X-ray burst from SAX J1808.4–3658 with a distinct “pause” feature during its rise, we show that bursts which ignite in a helium layer underneath a hydrogen-rich shell naturally give rise to such pauses, as long as enough energy is produced to eject the outer layers of the envelope by super-Eddington winds. The length of the pause is determined by the extent of the convection generated after ignition, while the rate of change of luminosity following the pause is set by the hydrogen gradient left behind by convection. Using the MESA stellar evolution code, we simulate the accumulation, nuclear burning, and convective mixing prior to and throughout the ignition of the burst, followed by the hydrodynamic wind. We show that the results are sensitive to the treatment of convection adopted within the code. In particular, the efficiency of mixing at the H/He interface plays a key role in determining the shape of the lightcurve. The data from SAX J1808.4–3658 favor strong mixing scenarios. Multidimensional simulations will be needed to properly model the interaction between convection and nuclear burning during these bursts, which will then enable a new way to use X-ray burst lightcurves to study neutron star surfaces.}
 }
 
 @article{guichandut2021,
