--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,28 +4,43 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal}}
 
+
+@thesis{guichandut2025,
+  abbr    = {PhD Thesis},
+  author  = {{Guichandut}, Simon},
+  title   = {Convection and outflows from accreting neutron stars during thermonuclear flashes},
+  school  = {McGill University},
+  year    = {2025},
+  month   = {may},
+  html    = {https://escholarship.mcgill.ca/concern/theses/4b29bc67n},
+  pdf     = {phd_thesis.pdf}
+}
+
+
 @ARTICLE{barra2025,
       abbr    = {A\&A},
        author = {{Barra}, F. and {Barret}, D. and {Pinto}, C. and {Di Salvo}, T. and {Weinberg}, N. and {Guichandut}, S.},
         title = "{Line detections in photospheric radius expansion bursts from 4U 1820-303}",
-      journal = {arXiv e-prints},
+      journal = {Astronomy and Astrophysics},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena},
          year = 2025,
-        month = jan,
-       arxiv = {2501.01488},
+        month = feb,
+          doi = {10.1051/0004-6361/202452878},
+       arxiv  = {2501.01488},
        abstract = {Context: NICER (Neutron star Interior Composition ExploreR) is the instrument of choice for the spectral analysis of type I X-ray bursts, as it provides high throughput at X-ray CCD resolution, down to 0.3 keV. Aims: This study investigates whether the energies of absorption lines detected in photospheric radius expansion (PRE) bursts correlate with the inferred blackbody radius. Previous reports suggested such a correlation, attributed to a combination of weaker gravitational redshift and higher blueshifts in bursts with larger radii. Methods: The analysis reexamines four previously studied PRE bursts and examines eight additional bursts from 4U 1820-303, evidencing PRE. Spectral evolution is tracked on the shortest possible timescales (tenth of a second) adopting two parallel continuum descriptions to characterise the photospheric expansion and line evolution. Applying the accretion-enhanced model, maximum blackbody radii of up to ∼900 km are inferred, with peak bolometric luminosities exceeding the Eddington limit of an Helium accretor. Absorption lines are assessed for significance using Monte Carlo simulations, and spectral lines are characterised using the state-of-art plasma codes available within {\sc{spex}} with a phenomenological continuum. A thorough parameter search explores Doppler shifts to avoid local minima. Results: Several significant (> 99.9%) absorption lines, including the previously reported 2.97 keV line, are detected. While no consistent correlation between line energies and blackbody radii is confirmed, bursts with larger radii exhibit up to four lines and the line strength is higher. The modelling suggests that the observed lines mostly originate from slightly redshifted (almost rest-frame) photo-/collisionally ionised gas in emission. For the burst with the largest PRE, a combination of photo-ionised plasma in both emission and absorption is preferred.}
 }
 
 
 
-@ARTICLE{zingale2024,
-         abbr = {AstroNum},
+@ARTICLE{zingale2025,
+         abbr = {J.Phys.Conf.Ser.},
        author = {{Zingale}, Michael and {Bhargava}, Khanak and {Brady}, Ryan and {Chen}, Zhi and {Guichandut}, Simon and {Johnson}, Eric T. and {Katz}, Max and {Smith Clark}, Alexander},
         title = "{The Challenges of Modeling Astrophysical Reacting Flows}",
-      journal = {arXiv e-prints},
+      journal = {Journal of Physics: Conference Series},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2024,
-        month = nov,
+         year = 2025,
+        month = apr,
+        doi   = {10.1088/1742-6596/2997/1/012007},
         arxiv = {2411.12491},
        abstract = {Stellar evolution is driven by the changing composition of a star from nuclear reactions. At the late stages of evolution and during explosive events, the timescale can be short and drive strong hydrodynamic flows, making simulations of astrophysical reacting flows challenging. Over the past decades, the standard approach to modeling reactions in simulation codes has been operator splitting, using implicit integrators for reactions. Here we explore some of the assumptions in this standard approach and describe some techniques for improving the efficiency and accuracy of astrophysical reacting flows.}
 }
@@ -90,5 +105,5 @@
   year    = {2020},
   month   = {august},
   html    = {https://escholarship.mcgill.ca/concern/theses/n870zw072},
-  pdf     = {Thesis.pdf}
+  pdf     = {msc_thesis.pdf}
 }
