--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,10 +10,23 @@
   author  = {{Guichandut}, Simon},
   title   = {Convection and outflows from accreting neutron stars during thermonuclear flashes},
   school  = {McGill University},
-  year    = {2025},
-  month   = {may},
+  year    = 2025,
+  month   = may,
   html    = {https://escholarship.mcgill.ca/concern/theses/4b29bc67n},
   pdf     = {phd_thesis.pdf}
+}
+
+@ARTICLE{casten2025,
+      abbr    = {A\&A},
+       author = {{Casten}, Sierra and {Guichandut}, Simon and {Cumming}, Andrew and {Brown}, Edward F.},
+        title = "{Weak Bursts on Slowly Accreting Neutron Stars}",
+      journal = {Astronomy and Astrophysics},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = aug,
+          doi = {10.3847/1538-4357/adf106},
+       arxiv  = {2506.15818},
+       abstract = {Nearly all observed thermonuclear X-ray bursts are thought to be triggered by the thermally unstable triple-alpha process. Unlike in accreting white dwarfs, the ≳108K envelope temperature forces hydrogen burning to proceed via the β-limited, thermally stable hot CNO cycle. Recent observations of weak X-ray bursts from SAX J1808.4-3658 occurring within 1-3 days of the onset of an accretion outburst have raised the question that these bursts were triggered by thermally unstable hydrogen ignition, analogously to classical novae. Using the stellar evolution code MESA, we explore the unstable ignition of hydrogen on slowly accreting neutron stars. For solar metallicities, the burning is insufficiently vigorous to launch convection and the burst rise is on the envelope thermal timescale, with the hydrogen being consumed over hours. For elevated metallicities (Z≳0.06), however, the initial proton captures onto CNO nuclei heat the envelope enough to drive convection and produce a sharp peak in the luminosity. This peak can match that of the SAX J1808.4-3658 burst, for sufficient enrichment. Following this peak, the hydrogen burning stabilizes at a rate set solely by the ignition depth and CNO abundance in the accreted matter. This quasi-steady-state burning produces an extended tail of elevated emission that lasts until the hydrogen is exhausted. Observations of the tail's luminosity and duration measure the hydrogen and metallicity abundance of the accreted material, while the distance-independent ratio of peak-to-tail luminosities would suggest the presence of significant metallicity gradients prior to convection.}
 }
 
 
